--- a/views/reservation/openRestaurants.handlebars
+++ b/views/reservation/openRestaurants.handlebars
@@ -3,7 +3,7 @@
 </head>
 <section>
     <nav class="topnav">
-        <a href="/">Home</a>
+        {{!-- <a href="/">Home</a> --}}
         <a href="/customers/private">Profile</a>
         <a class="active" href="/reservations">Book a Table</a>
         <a href="/reviews">Reviews</a>
