--- a/views/restaurants/private.handlebars
+++ b/views/restaurants/private.handlebars
@@ -14,7 +14,7 @@
 <body>
 <section>
     <nav class="topnav">
-        <a  href="/">Home</a>
+        {{!-- <a  href="/">Home</a> --}}
         <a  class="active" href="/restaurants/private">Profile</a>
         <a href="/restaurants/reservation">No. of Reservation</a>
         <a href="/reviews/restaurant/{{restaurant._id}}">Reviews</a>
