--- a/views/reservation/restaurantReservation.handlebars
+++ b/views/reservation/restaurantReservation.handlebars
@@ -3,7 +3,7 @@
 </head>
 <section>
     <nav class="topnav">
-        <a href="/">Home</a>
+        {{!-- <a href="/">Home</a> --}}
         <a href="/restaurants/private">Profile</a>
         <a class="active" href="/reservations">Reservations Made</a>
         <a href="/reviews/restaurant/{{reviewLink}}">Reviews</a>
