--- a/views/reservation/openRestaurants.handlebars
+++ b/views/reservation/openRestaurants.handlebars
@@ -6,6 +6,7 @@
         {{!-- <a href="/">Home</a> --}}
         <a href="/customers/private">Profile</a>
         <a class="active" href="/reservations">Book a Table</a>
+        <a href="/customers/reservations">Reservations Made</a>
         <a href="/reviews">Reviews</a>
     </nav>
 </section>
