--- a/views/reservation/customerReservation.handlebars
+++ b/views/reservation/customerReservation.handlebars
@@ -7,6 +7,7 @@
     <nav class="topnav">
         {{!-- <a href="/">Home</a> --}}
         <a href="/customers/private">Profile</a>
+        <a href="/reservations">Book a Table</a>
         <a class="active" href="/customers/reservations">Reservations Made</a>
         <a href="/reviews">Reviews</a>
     </nav>
@@ -15,9 +16,6 @@
 <section>
 <div class="content">
     <section>
-    {{#unless restaurants.length}}
-    <h3>No reservations have been made.</h3>
-    {{/unless}}
     {{#each reservations}}
     <div class="card">
         <div class="container" id="{{this.id}}">
