--- a/views/reservation/table.handlebars
+++ b/views/reservation/table.handlebars
@@ -35,12 +35,13 @@
                     <h1>{{restaurant.name}}</h1>
                     <div class="form-group">
                         <label for="reservationDate">Enter the Date</label>
-                        <input type="date" class="form-control" name="reservationDate" id="reservationDate"
+                        <input type="date" class="form-control" data-date="" data-date-format="DD MM YYYY" name="reservationDate" id="reservationDate"
                             placeholder="Enter the date here" required>
+
                     </div>
                     <div class="form-group">
                         <label for="reservationTime">Enter the Time</label>
-                        <input type="time" class="form-control" name="reservationTime" id="reservationTime"
+                        <input type="time" class="form-control" name="reservationTime" id="reservationTime" min="09:00" max="21:00"
                             placeholder="Enter the time here" required>
                     </div>
                    <div class="form-group">
