--- a/views/restaurants/login.handlebars
+++ b/views/restaurants/login.handlebars
@@ -21,15 +21,17 @@
         </nav>
     </section>
     <main>
-       
-            <div class="container">
-                <h1>Login Page</h1>
-            </div>
-       
+
+        <div class="container">
+            <h1>Login Page</h1>
+        </div>
+
 
         <div class="container">
             <fieldset>
-                <legend><h4>Enter User login Information Here</h4></legend>
+                <legend>
+                    <h4>Enter User login Information Here</h4>
+                </legend>
                 <form id="login-form" action="login" method="post">
                     <div class="form-group">
                         <label for="username">Restaurant Name</label>
@@ -44,6 +46,9 @@
                     </div>
 
                     <button type="submit" class="btn btn-primary">Log In</button>
+                    {{#each errors}}
+                        <div class="error">{{this}}</div>
+                    {{/each}}
                 </form>
             </fieldset>
             <div>
@@ -55,15 +60,7 @@
 
 
     </main>
-    {{#if hasError}}
-    {{#each errors}}
-    <ul>
-        <li class="error">
-            {{this}}
-        </li>
-    </ul>
-    {{/each}}
-    {{/if}}
+
 </body>
 
 </html>
