--- a/views/restaurants/register.handlebars
+++ b/views/restaurants/register.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
+    <title>Restaurant Login Page</title>
     <link rel="stylesheet" href="/public/css/site.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
@@ -40,7 +40,8 @@
 
                     <div class="form-group">
                         <label for="name">Restaurant Official Website</label>
-                        <input type="url" name="website" class="form-control" placeholder="Enter the Restaurant website here" required>
+                        <input type="url" name="website" class="form-control"
+                            placeholder="Enter the Restaurant website here" required>
                     </div>
 
                     <div class="form-group">
@@ -62,7 +63,8 @@
 
                     <div class="form-group">
                         <label for="description">Description</label>
-                        <textarea rows="4" class="form-control" id="description" name="description" placeholder="Describe your Restaurant here"></textarea>
+                        <textarea rows="4" class="form-control" id="description" name="description"
+                            placeholder="Describe your Restaurant here"></textarea>
                     </div>
 
                     <div class="form-group">
@@ -73,6 +75,9 @@
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary">Register</button>
                     </div>
+                    {{#each errors}}
+                        <div class="error">{{this}}</div>
+                    {{/each}}
                 </form>
             </fieldset>
 
@@ -81,15 +86,7 @@
             </div>
         </div>
     </main>
-    {{#if hasError}}
-    {{#each errors}}
-    <ul>
-        <li class="error">
-            {{this}}
-        </li>
-    </ul>
-    {{/each}}
-    {{/if}}
+
 </body>
 
 </html>
