--- a/views/users/signup.handlebars
+++ b/views/users/signup.handlebars
@@ -60,6 +60,7 @@
             <div class="error">{{this}}</div>
             {{/each}}
         </form>
+        <h4><a href="/customers/login">Have a account already? Login then!</a></h4>
     </div>
 </body>
 
