--- a/views/review/restaurantReview.handlebars
+++ b/views/review/restaurantReview.handlebars
@@ -5,7 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/public/css/site.css" />
+    <link rel="stylesheet" href="../../public/css/cards.css">
 </head>
 
 <body>
@@ -19,11 +19,11 @@
     </nav>
 </section>
 {{#if showForm}}
-    <form method="POST" action="/reviews/customer/{{restaurant._id}}" id="review-form" novalidate>
+    <form method="POST" action="/reviews/restaurant/{{restaurant._id}}" id="review-form" novalidate>
             <div class="container">
                 <div class="col form-group">
                     <label for="rating">Rating</label>
-                    <input type="number" class="form-control" id="rating" name="rating" placeholder="Give rating">
+                    <input type="number" class="form-control" id="rating" name="rating" placeholder="Give rating" min="1" max="5">
                 </div>
                 <div class="col form-group">
                     <label for="review">Write review</label>
@@ -38,24 +38,14 @@
             {{/each}}
     </form>
 {{/if}}
-{{#if hasReview}}
-    <div class="col align-self-center">
-        <h3>Your Review</h1>
-        <h4>{{review.fullName}}</h4>
-        <h4>{{review.rating}}</h4>
-        <h4>{{review.review}}</h4>
-        <form action="/reviews/delete/{{review._id}}" method="POST">
-            <button type="submit" class="btn btn-danger">Delete</button>
-        </form>
-    </div>
-{{/if}}
+
 <h1>Reviews for {{restaurant.name}}</h1>
 <div class ="content">
     <section>
         {{#each restaurant.reviews}}
         <div class="card">
             <div class="container">
-                <h3>{{this.fullName}}</h3><br>
+                <h3>{{this.fullName}}</h3>
                 <h4>{{this.rating}}</h4>
                 <h4>{{this.review}}</h4>
             </div>
