--- a/views/restaurants/private.handlebars
+++ b/views/restaurants/private.handlebars
@@ -16,7 +16,7 @@
     <nav class="topnav">
         {{!-- <a  href="/">Home</a> --}}
         <a  class="active" href="/restaurants/private">Profile</a>
-        <a href="/restaurants/reservation">No. of Reservation</a>
+        <a href="/restaurants/reservation">Reservations Made</a>
         <a href="/reviews/restaurant/{{restaurant._id}}">Reviews</a>
     </nav>
 </section>
@@ -34,31 +34,31 @@
                 <legend>Your Restaurant Profile</legend>
     <div class="form-group">
         <label for="name">Restaurant Name</label>
-        <input type="text" class="form-control" id="name" value={{restaurant.name}} />
+        <input type="text" class="form-control" id="name" value={{restaurant.name}} readonly/>
     </div>
 
     <div class="form-group">
         <label for="name">Restaurant Website Link</label>
-        <input type="url" name="website" class="form-control" value={{restaurant.website}}>
+        <input type="url" name="website" class="form-control" value={{restaurant.website}} readonly/>
     </div>
     <div class="form-group">
         <label for="address">Address</label>
-        <input type="text" class="form-control"  id="address" value={{restaurant.address}} />
+        <input type="text" class="form-control"  id="address" value={{restaurant.address}} readonly/>
     </div>
 
     <div class="form-group">
         <label for="email">Email ID</label>
-        <input type="email" class="form-control"  id="email" value={{restaurant.email}} />
+        <input type="email" class="form-control"  id="email" value={{restaurant.email}} readonly />
     </div>
 
     <div class="form-group">
         <label for="phone">Contact Number</label>
-        <input type="number" class="form-control"  id="phone" value={{restaurant.phone}} />
+        <input type="number" class="form-control"  id="phone" value={{restaurant.phone}} readonly/>
     </div>
 
     <div class="form-group">
         <label for="description">About</label>
-        <textarea rows="4" class="form-control" > {{restaurant.description}} </textarea>
+        <textarea rows="4" class="form-control" readonly> {{restaurant.description}} </textarea>
     </div>
 
     <div>
