--- a/views/review/restaurantReview.handlebars
+++ b/views/review/restaurantReview.handlebars
@@ -11,9 +11,8 @@
 <body>
 <section>
     <nav class="topnav">
-        <a href="/customers/private">Profile</a>
-        <a href="/reservations">Book a Table</a>
-        <a href="/customers/reservations">Reservations Made</a>
+        <a href="/restaurants/private">Profile</a>
+        <a href="/restaurants/reservation">Reservations Made</a>
         <a class="active" href="/reviews/restaurant/{{restaurant._id}}">Review</a>
 
     </nav>
